Fixed alignment bug

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
     </div>
   </div>
   <div class="container">
-    <div id="projects"></div>
+    <div id="projects">
+      <div class="gap"></div>
+      <div class="gap"></div>
+    </div>
   </div>
 
   <script id="project-template" type="text/x-handlebars-template">
