Tweaked tag styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <script id="tag-filter-template" type="text/x-handlebars-template">
     {{#tags}}
-    <button class="btn" data-tag=".{{ escape name }}" onclick="app.filter('.{{ escape name }}')">{{ name }}</button>
+    <button class="btn btn-success btn-flat" data-tag=".{{ escape name }}" onclick="app.filter('.{{ escape name }}')">{{ name }}</button>
     {{/tags}}
   </script>
 
