--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/ripples.min.css">
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/roboto.min.css">
     <link rel="stylesheet" href="static/style.css">
-
-    <script src="static/components/handlebars/handlebars.min.js"></script>
-    <script src="static/components/underscore/underscore-min.js"></script>
-
-    <script src="static/components/jquery/dist/jquery.min.js"></script>
-    <script src="static/components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="static/components/bootstrap-material-design/dist/js/ripples.min.js"></script>
-    <script src="static/components/bootstrap-material-design/dist/js/material.min.js"></script>
-    <script src="static/components/mixitup/build/jquery.mixitup.min.js"></script>
-    <script src="static/colors.js"></script>
-
-    <script src="data/projects.json"></script>
   </head>
   <body>
     <div class="navbar">
@@ -54,23 +42,37 @@
   <script id="project-template" type="text/x-handlebars-template">
     {{#projects}}
     <div class="project flip-container mix {{#each tags}}{{ escape name }} {{/each}}" data-myorder="{{ @index }}">
-      <div class="flipper">
-        <div class="panel front" style="background-color: {{ color name }}">
-          <div class="panel-body">
+        <div class="panel" style="background-color: {{ color name }}; color: {{ color name }}">
+          <panel-heading>
             {{#if icon_class}}
-            <icon class="{{ icon_class }}"></icon>
-            {{else}}
+            <icon class="{{ icon_class }}" style="color: {{ color name }}"></icon>
+            {{/if}}
+            {{#if icon_url}}
             <img src="{{ icon_url }}" alt="{{ name }}" />
             {{/if}}
             <title>{{ name }}</title>
-          </div>
-        </div>
-        <div class="panel back">
-          <div class="panel-body">
-            <h3>{{ name }}</h3>
-            <p>{{ description }}</p>
-            <a href="{{ url }}" class="btn btn-primary btn-xs">Github page</a>
-          </div>
+            <stats>
+              <stars class="mdi-action-grade" style="color: {{ color name }}">{{ stars_count }}</stars>
+              <forks class="icon-flow-branch" style="color: {{ color name }}">{{ forks_count }}</forks>
+            </stats>
+          </panel-heading>
+          <panel-body>
+            {{ description }}
+            {{#if links}}
+            <links>
+              {{#links}}
+              <a href="{{ url }}" target="_blank" class="btn btn-flat">
+                {{#if class}}
+                <i class="icon-{{ class }}">
+                {{else}}
+                <i class="icon-{{ title }}">
+                {{/if}}
+                </i>{{ title }}
+              </a>
+              {{/links}}
+            </links>
+            {{/if}}
+          </panel-body>
         </div>
       </div>
     </div>
@@ -83,6 +85,20 @@
     {{/tags}}
   </script>
 
+
+  <script src="static/components/handlebars/handlebars.min.js"></script>
+  <script src="static/components/underscore/underscore-min.js"></script>
+
+  <script src="static/components/jquery/dist/jquery.min.js"></script>
+  <script src="static/components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="static/components/bootstrap-material-design/dist/js/ripples.min.js"></script>
+  <script src="static/components/bootstrap-material-design/dist/js/material.min.js"></script>
+  <script src="static/components/mixitup/build/jquery.mixitup.min.js"></script>
+  <script src="static/colors.js"></script>
+
+  <link rel="stylesheet" href="static/components/fontello-76a038de/css/fontello.css">
+
+  <script src="data/projects.json"></script>
   <script src="static/app.js"></script>
   <script>
     var app = App();
