Fixed icon class, added “site” link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               {{#links}}
               <a href="{{ url }}" target="_blank" class="btn btn-flat">
                 {{#if class}}
-                <i class="icon-{{ class }}">
+                <i class="{{ class }}">
                 {{else}}
                 <i class="icon-{{ title }}">
                 {{/if}}
