--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </div>
     </header>
 
-    <div class="navbar navbar-material-cyan-800" data-spy="affix" data-offset-top="207">
+    <div class="navbar navbar-material-cyan-800" id="affix">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -113,7 +113,7 @@
   <script id="tag-filter-template" type="text/x-handlebars-template">
     {{#tags}}
     <li>
-      <a href="javascript:void(0)" data-tag=".{{ escape name }}" onclick="app.filter('.{{ escape name }}')">{{ name }}</a>
+      <a href="javascript:void(0)" data-toggle="collapse" data-target=".navbar-collapse" data-tag=".{{ escape name }}" onclick="app.filter('.{{ escape name }}')">{{ name }}</a>
     </li>
     {{/tags}}
   </script>
