Updated to OpenSpace logo

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/material-fullpalette.min.css">
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/ripples.min.css">
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/roboto.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet'>
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
     <header class="navbar navbar-material-cyan-800">
       <div class="container">
-        <h1 class="col-md-2"><img src="static/logo.png" alt="OpenSpace" /></h1>
-        <div class="col-md-10">
+        <h1><img src="static/logo.png" alt="OpenSpace" width="116" /></h1>
+        <div>
           <h2>Open Source Projects</h2>
           <p>Showcase your open source GitHub projects. <a href="https://github.com/EverythingMe/openspace">Get it here</a>.</p>
         </div>
