--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <link rel="stylesheet" href="static/components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/material-fullpalette.min.css">
-    <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/ripples.min.css">
-    <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/roboto.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet'>
     <link rel="stylesheet" href="static/style.css">
   </head>
