Added open graph tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="description" content="An open source app to showcase your open source work (yo dawg)." />
     <meta name="keywords" content="open source, showcase, gallery, oss, github, EvertythingMe" />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://everythingme.github.io/openspace/" />
+    <meta property="og:title" content="OpenSpace | showcase your open source work" />
+    <meta property="og:description" content="An open source app to showcase your open source work (yo dawg)." />
+    <meta property="og:image" content="http://everythingme.github.io/openspace/static/share.png" />
+
     <link rel="stylesheet" href="static/components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/components/bootstrap-material-design/dist/css/material-fullpalette.min.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet'>
